tests/machine/x/pl/if_then_else_nested.error
exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/if_then_else_nested.pl:3: user:main is/2: Type error: `[]' expected, found `"medium"' (a string) ("x" must hold one character)
