tests/machine/x/pl/if_then_else_nested.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:32Z
:- style_check(-singleton).
:- initialization(main, main).
main :-
    X is 8,
    ((X > 5) -> _V0 = "medium" ; _V0 = "small"),
    ((X > 10) -> _V1 = "big" ; _V1 = _V0),
    Msg = _V1,
    _V2 is Msg,
    writeln(_V2),
    true.
